2005-06-04  Jacob Smullyan  <smulloni@smullyan.org>

	* src/testingtesting.py: an extremely barebones testing framework,
	probably upwards compatible with py.test.

2005-06-01  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/mssqlconn.py (MssqlDBI.listTables),
	src/pydo/drivers/sqliteconn.py (SqliteDBI.listTables): for
	consistency, return list sorted as the other drivers do.

	* doc/manual.rst: documenting guesscache.

	* src/pydo/__init__.py: import from guesscache.py.

	* src/pydo/guesscache.py: adding a cache for storing table
	introspection data.

	* src/pydo/base.py (PyDO): added guesscache attribute, and 
	processing with it in _getTableDescription.

	* doc/manual.rst: document change to signature of project().

	* src/pydo/__init__.py: use getall to make the package's __all__
	nicer. 

	* src/pydo/utils.py (getall): function for coalescing __all__ of
	submodules into the package namespace's __all__.

2005-05-31  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO.project): change to signature: take
	fields as positional parameters rather than a tuple (saves typing
	and is easier for tuples of length one).

	* src/pydo/multifetch.py (iterfetch): correction to docstring.

	* src/pydo/base.py (PyDO._joinTableSQL, PyDO.updateSome)
	(PyDO._uniqueWhere, PyDO._processWhere, PyDO.joinTable):
	more refactoring to get bind variable conversion to work correctly
	with paramstyles that keep bind variables in dictionaries and
	generate interpolation keys. 

2005-05-31  Tim Golden  <mail@timgolden.me.uk>

        * src/pydo/drivers/mssqlconn.py: more precise handling of
        identity / sequence detection (only consider something as
        a sequence if it is not null, an identity and a primary key).
        Also correct a typo which had the wrong sql executed when
        looking for unique constraints.

2005-05-31  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._update_raw): *partial* fix for bug found